--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
+  },
+  
+
+    "scripts": {
+      "start":"node index.js"
+    }
   }
-}
+  
+
